Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-101755

(glob|magic)-deleteall does not remove existing globs/magic with xml providers

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • P3: Somewhat important
    • 6.5.2, 6.6.0
    • 6.2.3, 6.3.0 Beta3
    • Core: Other
    • None
    • 9547ef58c (dev), dc2ff0960 (6.5)

    Description

      I've attached an example project. (Linux-only)

      It uses xml files to define a MIME type "application/vnd.test.test".

      One defines it with glob "*.foo".
      The other does <glob-deleteall> and sets a glob "*.bar"

      After that, the MIME database detects the MIME type vnd.test.test for both "foo.foo" and "foo.bar", but it should only detect it for "foo.bar".

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            dfaure_kdab David Faure
            con Eike Ziller
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes