tests/auto/corelib/mimetypes/qmimedatabase/tst_qmimedatabase.h
@@ -25,6 +25,7 @@ private slots:
     void mimeTypeForFileName();
     void mimeTypesForFileName_data();
     void mimeTypesForFileName();
+    void mimeTypesForFileName_glob_deleteall();
     void inheritance();
     void aliases();
     void listAliases_data();
